[gd_scene load_steps=2 format=3 uid="uid://bfekymno7c4e6"]

[ext_resource type="Script" path="res://ui/LanguageMenu/LangaugeMenu.gd" id="1_dkw3n"]

[node name="LangaugeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_dkw3n")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = 39.0
offset_right = -75.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_right = 888.0
offset_bottom = 497.0

[node name="SystemLocale" type="Label" parent="MarginContainer/VBoxContainer"]
offset_right = 888.0
offset_bottom = 26.0
text = "System language: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectedLocale" type="Label" parent="MarginContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 888.0
offset_bottom = 56.0
text = "Selected locale: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer"]
offset_top = 60.0
offset_right = 888.0
offset_bottom = 497.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
metadata/_edit_layout_mode = 1

[node name="EmptyLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -13.0
offset_right = 76.5
offset_bottom = 13.0
text = "No  locales loaded!"
